# banned-fastapi

./: .bumpversion.cfg  .gitignore  Makefile  Procfile  README.md  dbtest-compose.yml  prestart.sh  pyproject.toml  setup.cfg  test-compose.yml  wsgi.py
.github/: dependabot.yml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 68f24280355c_create_users_and_items_table.py
app/: backend_pre_start.py  constants.py  initial_data.py  main.py  utils.py
app/alembic/: env.py
app/alembic/versions/: 68f24280355c_create_users_and_items_table.py
app/api/: deps.py
app/api/api_v1/endpoints/: items.py  login.py  users.py
app/app/: backend_pre_start.py  constants.py  main.py  utils.py
app/app/api/: deps.py
app/app/api/api_v1/: api.py
app/app/api/api_v1/endpoints/: items.py  login.py  users.py
app/app/core/: config.py  security.py
app/app/crud/: __init__.py  base.py  crud_item.py  crud_user.py
app/app/db/: init_db.py  session.py
app/app/models/: item.py  user.py
app/app/schemas/: __init__.py  user.py
app/core/: config.py  security.py
app/crud/: base.py  crud_item.py  crud_user.py
app/db/: init_db.py  session.py
app/models/: __init__.py  item.py  user.py
app/schemas/: item.py  msg.py  token.py
attic/: conftest.py
attic/.github/: dependabot.yml
tests/: conftest.py  test_pydantics.py
