[tool.poetry]
name = "banned-fastapi"
version = "0.1.0"
description = ""
authors = ["Quien Sabe <qs5779@mail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
pydantic = "^1.10.7"
python-multipart = "^0.0.6"
email-validator = "^1.3.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
emails = "^0.6"
tenacity = "^8.2.2"


[tool.poetry.group.test.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
wemake-python-styleguide = "^0.17.0"
mypy = "^1.2.0"
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
