[tool.poetry]
name = "wtf-fastapi"
version = "0.1.1-dev0"
description = "API to store ip addresses banned by fail2ban"
authors = ["Quien Sabe <qs5779@mail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pydantic = {extras = ["email"], version = "^1.10.8"}
python-multipart = "^0.0.6"
email-validator = "^2.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
sqlalchemy = {extras = ["mypy"], version = "^2.0.15"}
alembic = "^1.11.1"
emails = "^0.6"
tenacity = "^8.2.2"
pydantic-extra-types = "^0.0.1"
types-python-jose = "^3.3.4.7"
types-passlib = "^1.7.7.12"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"


[tool.poetry.group.test.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
wemake-python-styleguide = "^0.17.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
safety = "^2.3.5"
pytest-cov = "^4.0.0"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
